# NdkDemo

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/module1/: CMakeLists.txt  module1.cpp  module1.h
app/src/main/cpp/module2/: CMakeLists.txt  module2.cpp  module2.h
app/src/main/java/com/example/ndkdemo/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
